# cisco-config-templates

./: pyproject.toml  requirements.txt
cisco_config_templates/: GOLD_STANDARD.txt  Infastructure_Information.xlsx  OOB.txt  config  id_rsa  id_rsa.pub  main.py  ping.py  report.txt
cisco_config_templates.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cisco_config_templates/configs/: GOLD_STANDARD.cfg  GOLD_STANDARD.txt  base_config.txt
cisco_config_templates/configs/output/: config_Control-Node.cfg  config_DC1-R1.cfg  config_DC1-R2.cfg  config_DC1-SW1.cfg  config_DC2-R1.cfg  config_DC2-R2.cfg  config_DC2-SW1.cfg  config_INTERNET.cfg  config_S1-R1.cfg  config_S1-SW1.cfg  config_S2-R1.cfg  config_S2-SW1.cfg  config_S3-R1.cfg  config_S3-R2.cfg  config_S3-SW1.cfg  config_S4-R1.cfg  config_S4-R2.cfg  config_S4-SW1.cfg  config_S5-R1.cfg  config_S5-SW1.cfg
tests/: test_cisco_config_templates.py
