
[tool.poetry]
name = "cisco_config_templates"
version = "0.1.0"
description = "Generate Cisco IOS Configs!"
authors = ["Tory Davenport <Contact@torydavenport.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
